# server/services/RecipeService.ts
@@ -69,8 +69,7 @@ recipe_is_assembly
   @Post("get-by")
   // eslint-disable-next-line @typescript-eslint/no-unused-vars
   async getRecipesByFilter(@Body() filter?: RecipeFilter) {
-    let query =
-      "SELECT DISTINCT ON (recipes.recipe_id) recipes.recipe_id, recipe_name, recipe_description FROM recipes \
+    let query = "SELECT DISTINCT ON (recipes.recipe_id) recipes.* FROM recipes \
     "
     // LEFT JOIN resource_recipes ON (recipes.recipe_id = resource_recipes.recipe_id)\
     const queryClauses: string[] = []
